--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div class="social-icons">
     <a href="#"><i class="fab fa-instagram"></i></a>
     <a href="#"><i class="far fa-envelope"></i></a>
-    <a href="#"><i class="fab fa-whatsapp"></i></a>
+    <a href="https://wa.me/5521995103301?text=Olá. Preciso entrar em contato."><i class="fab fa-whatsapp"></i></a>
   </div>
 
   <footer>
